--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								<h3>Contact Me</h3>
 								<br/>
 								<h3>Email : hamza.aziz27hk@gmail.com</h3> <br/>
-								<h3>Phone : +97431335138</h3> <br/>
+								<h3>Phone : +97431335138  (Qatar)</h3> <br/>
 								<h3> <a href="https://www.facebook.com/profile.php?id=100001313810239">Facebook</a> </h3> <br/>
 								<h3> <a href="https://www.linkedin.com/in/hamza-khan-3a7150134/">LinkedIn</a> </h3> <br/>
 								
