--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								</p>
 								<ul class="feature-icons">
 									<li class="fa-code">CSCU(certified secure computer user 2018)</li>
-									            <li class="fa-cubes">IELTS 2018</li>
+									            <li book="fa-cubes">IELTS 2018</li>
 									
 								
 								</ul>
