--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<header class="major">
 									<h3>About Me</h3>
 									<h2>Education</h2>
-									<p> Bachelor's in Computer Science <br/>Preston University,Islamabad </p>
+									<p> Bachelor's in Computer Science <br/>Preston University,Islamabad Pakistan </p>
 									
 									
 								</header>
